# hicma-parsec

./: .gitmodules  CMakeLists.txt  HiCMA_dpotrf_L_2flow.jdf  HiCMA_dpotrf_L_2flow_wrapper.c  HiCMA_dpotrf_L_3flow.jdf  HiCMA_dpotrf_L_3flow2_wrapper.c  LICENSE  README.md  RELEASE.md  STARSH_check.jdf  TODO.txt  band_gen.jdf  calculate_time.py  descprint.c  dplasma-install-shaheen-O3.sh  hicma-parsec-install-shaheen-O3.sh  hicma_hcore.c  hicma_hcore.h  hicma_parsec_internal.h  lorapo_parsec.patch  make.inc  memory_compute.c  rank_gather.jdf  reorder_gemm.jdf
hicma_parsec/: Av_memory.jdf  CMakeLists.txt  HiCMA_dpotrf_L_2flow.jdf  HiCMA_dpotrf_L_2flow_wrapper.c  HiCMA_dpotrf_L_3flow.jdf  HiCMA_dpotrf_L_3flow2.jdf  HiCMA_dpotrf_L_3flow_wrapper.c  Makefile  README  README.md  STARSH_check.jdf  STARSH_gen.jdf  auxdescutil.h  band_free.jdf  band_regenerate.jdf  band_size_auto_tuning.jdf  band_size_calculate.jdf  common_timing.h  compile-lorapo.sh  core_dblas.h  descprint.c  flops.h  hicma_hcore.c  hicma_hcore.h  hicma_init.c  hicma_init.h  hicma_internal.c  hicma_internal.h  hicma_parsec.c  hicma_parsec.h  hicma_parsec_distribution.c  hicma_parsec_internal.h  hicma_struct.h  install_lorapo_example.sh  ka_counts.h  lapack.h  make.inc_example  matrix_gather.jdf  op_counts.h  rank_check.jdf  (+6 more)
hicma_parsec/exp/: check1.batch  distmem.sh  distruns.sh
hicma_parsec/exp/cases/: exp3d.sh
hicma_parsec/exp/notebooks/: common.py
hicma_parsec/exp/res/: 2019-04-08-lorapo-breakdown-1.txt  rawparse.py
hicma_parsec/experiments/D1w100/: all_results_D1_w100  run128.sh  run16.sh
hicma_parsec/experiments/D1w100/result/: node128_D1_w100_1  node128_D1_w100_1_all  node128_D1_w100_2_all  node128_D1_w100_3  node128_D1_w100_4_all  node128_D1_w100_5  node128_D1_w100_5_all  node16_D1_w100_2  node16_D1_w100_4  node16_D1_w100_4_all  node16_D1_w100_5  node32_D1_w100_3  node32_D1_w100_3_all  node32_D1_w100_4  node512_D1_w100_5_all  node512_D1_w100_5_new  node64_D1_w100_2  node64_D1_w100_3  node64_D1_w100_3_all  node64_D1_w100_4  node64_D1_w100_4_all
hicma_parsec/experiments/D1w50/: run32.sh
hicma_parsec/experiments/D1w50/result/: node128_D1_w50_1  node128_D1_w50_1_all  node128_D1_w50_2  node128_D1_w50_4_all  node16_D1_w50_2_all  node16_D1_w50_3  node16_D1_w50_3_all  node16_D1_w50_4  node16_D1_w50_4_all  node32_D1_w50_1  node32_D1_w50_1_all  node32_D1_w50_2  node32_D1_w50_3  node32_D1_w50_3_all  node32_D1_w50_5  node512_D1_w50_5  node64_D1_w50_1  node64_D1_w50_2  node64_D1_w50_3  node64_D1_w50_3_all  node64_D1_w50_4_all
hicma_parsec/experiments/D2/: all_results_D2_w50  result-42M-node1024-D2  run128.sh  run16.sh  run256.sh
hicma_parsec/experiments/D2/result/: node128_D2_w50_1_all  node128_D2_w50_2  node128_D2_w50_3  node128_D2_w50_4  node128_D2_w50_4_all  node16_D2_w50_1  node16_D2_w50_1_all  node16_D2_w50_2  node16_D2_w50_2_all  node16_D2_w50_3_all  node16_D2_w50_4  node16_D2_w50_4_all  node32_D2_w50_3  node32_D2_w50_3_all  node32_D2_w50_4_all  node32_D2_w50_5  node512_D2_w50_5_new  node64_D2_w50_2  node64_D2_w50_3  node64_D2_w50_3_all
hicma_parsec/experiments/D3/: all_results_D3  run16.sh  run32.sh  run64.sh
hicma_parsec/experiments/D3/result/: node128_D3_1_all  node128_D3_2  node128_D3_3  node128_D3_5_all  node16_D3_1  node16_D3_1_all  node16_D3_2_all  node16_D3_3  node16_D3_3_all  node16_D3_4  node16_D3_4_all  node256_D3_1_all  node256_D3_2  node256_D3_3  node256_D3_3_all  node256_D3_4_all  node32_D3_1  node32_D3_2  node32_D3_3  node64_D3_1_all  node64_D3_2_all  node64_D3_3  node64_D3_4
hicma_parsec/experiments/old-result/: all_results_3D  run128-D1w100.sh  run16-D1w50.sh  run16-D2.sh  run16-D3.sh  run256-D1w100.sh  run256-D1w50.sh  run256-D2.sh  run256-D3.sh  run256-D4.sh  run32-D1w100.sh  run32-D3.sh  run512-D1w100.sh  run512-D1w50.sh  run512-D3.sh  run512-D4.sh  run64-D2.sh  run64-D3.sh  run64-D4.sh
hicma_parsec/experiments/old-result/result/: node16_D0_w50  node16_D3_band2  node16_D3_band4_all  node16_D4_band1_all  node256_D1_w50  node256_D4_band1  node32_D1_w100  node32_D3_band1  node32_D4_band1_all  node512_D1_w100  node512_D3_band1  node512_D4_band1_all  node64_D1_w100  node64_D2_w50
hicma_parsec/experiments_D4/memory/: memory_allocation.c
hicma_parsec/experiments_D4/shaheen/: run128_D4_band_size.sh  run128_D4_performance.sh  run128_D4_performance_once.sh  run128_D4_tile_size.sh  run16_D4_performance.sh  run256_D4_band_size.sh  run256_D4_reorder_gemm.sh  run32_D4_performance.sh  run512_D4_performance.sh  run512_D4_performance_bandsize1.sh  run512_D4_performance_once.sh  run64_D4_performance.sh
hicma_parsec/experiments_D4/shaheen/result/: shaheen_128node_1080000_tile_size.csv  shaheen_128node_2160000_tile_size.csv  shaheen_256node_2160000_band_size.csv  shaheen_64node_1M_band_size.csv  shaheen_64node_1M_tile_size.csv  shaheen_D4_performance_all.csv  shaheen_D4_performance_nodes128.csv  shaheen_D4_performance_nodes128_all.csv  shaheen_D4_performance_nodes128_po_recursive.csv  shaheen_D4_performance_nodes128_po_recursive_all.csv  shaheen_D4_performance_nodes16_all.csv  shaheen_D4_performance_nodes256.csv  shaheen_D4_performance_nodes32.csv  shaheen_D4_performance_nodes32_all.csv  shaheen_D4_performance_nodes512_all.csv  shaheen_D4_performance_nodes512_bandsize1.csv  shaheen_D4_performance_nodes512_po_recursive.csv  shaheen_D4_performance_nodes512_po_recursive_all.csv  (+3 more)
hicma_parsec/experiments_D4/shaheen_new_band_distribution/: do-all.sh  run1024_D4_performance.sh  run128_D4_compare.sh  run128_D4_tile_size.sh  run16_D4_performance.sh  run2048_D4_performance.sh  run256_D4_band_size.sh  run256_D4_tile_size.sh  run4096_D4_performance.sh  run512_D4_performance.sh  run512_D4_performance_acc2.sh  run512_D4_performance_only_band.sh  run64_D4_band_size.sh
hicma_parsec/scripts/: dplasma-install-shaheen.sh  ecrc.intel.make.inc  make.inc-plasma-gcc-mkl  modules-ecrc-gcc-7-2-mkl.sh  modules-ecrc-gcc-openblas.sh  parsec-install-ecrc-with-plasma-gcc-mkl.sh  parsec-install-ecrc-with-plasma-intel.sh  parsec-install-ecrc.sh  plasma-install-shaheen.sh  setup-starsh.sh  setuplibs.sh  shaheen.make.inc
(+239 files in other folders)
